  &perl()), but it is always SCALAR

- MTT lock server.

- SVN module - choose between "export" and "checkout"
  (defaults to "export"):
  - svn_export = 1 (specify the use of "svn export")
  - svn_checkout = 1 (specify the use of "svn checkout")
  - svn_command (e.g., "svk" or "rsh some-node svn")

- terminate_files field in MTT section.  Defaults to $HOME/mtt-stop
  and &scratch_root()/mtt-stop.

- Added support for MPICH2 (and therefore MVAPICH2) and LAM/MPI

- Added support for the ClusterTools package installer

- Renamed the MPI install phase field names:
  compiler_name -> ompi_compiler_name (etc.)
  Need to check for backward compatibility

- Fix the mpi_details logic. We now follow 5 specific steps to look for 
  the Right MPI Details section to use: 

  1. Look for an mpi_details field in the current MPI Install phase
     that matches a valid MPI Details section
  2. Look for an mpi_details field in the current MPI Get phase that
     matches a valid MPI Details section
  3. Look for an mpi_install field is any MPI Details section that
     matches the current MPI Install phase
  4. Look for an mpi_get field is any MPI Details section that matches
     the current MPI Get phase
  5. If we didn't find anything above, take the first MPI Details
     section we find

- Cluster description strings for the below fields can be overridden
  in the [MPI Install] and [MTT] INI sections
  - platform_type
  - platform_hardware
  - os_name
  - os_version

- Added "description" field in MTT, MPI install, Test build, and Test
  run sections.  If not set in MPI Install/Test build/Test run
  sections, will use the value from the MTT section.

- Added "log_file" field in [MTT] section

- Added "funclet_files" field into [MTT] section, allowing a
  comma-delimited list of .pm files to add more funclets to MTT.

- Allow timeouts to be specified in [HH:[MM:]]SS format in the ini file.

- before_any, before_each, after_any, and after_each steps can be set to
  funclets