@@ -94,3 +94,5 @@ To announce to OMPI core testers:
 
 - before_any, before_each, after_any, and after_each steps can be set to
   funclets
+
+- Added "INI_NAME" as a predefined INI parameter (a la Perl's $PROGRAM_NAME)
